[gd_scene load_steps=11 format=3 uid="uid://pom2vykvdr6l"]

[ext_resource type="Script" uid="uid://cs3bexcwpu1yl" path="res://scripts/game.gd" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://bsihdvy74rvti" path="res://assests_g/bg.jpeg" id="2_0tnpc"]
[ext_resource type="Texture2D" uid="uid://ckfodvekxf650" path="res://assests_g/firefly.jpeg" id="3_0tnpc"]
[ext_resource type="Script" uid="uid://emxjowssqlx6" path="res://scripts/bird.gd" id="4_iywne"]
[ext_resource type="FontFile" uid="uid://h8kl0wgq3d1a" path="res://fonts/Caveat/static/Caveat-SemiBold.ttf" id="5_0tnpc"]
[ext_resource type="AudioStream" uid="uid://t5ycxcjqd6gv" path="res://assets/explosion.wav" id="7_u5sy4"]
[ext_resource type="AudioStream" uid="uid://b1nlcxski3ie7" path="res://assets/score.wav" id="8_gee14"]
[ext_resource type="AudioStream" uid="uid://ce32sr37iqfky" path="res://assets/jump.wav" id="9_0tnpc"]
[ext_resource type="AudioStream" uid="uid://druyj3etpnb1p" path="res://assets/powerUp.wav" id="10_vtaks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtaks"]
size = Vector2(238.993, 228.591)

[node name="Game" type="Node2D"]
script = ExtResource("1_uwrxv")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(-307, -44)
scale = Vector2(2.30525, 1.12008)
texture = ExtResource("2_0tnpc")
centered = false

[node name="firefly" type="Sprite2D" parent="."]
position = Vector2(334.5, 178.5)
scale = Vector2(0.214844, 0.152344)
texture = ExtResource("3_0tnpc")
flip_h = true
script = ExtResource("4_iywne")

[node name="BirdArea2D" type="Area2D" parent="firefly"]
position = Vector2(-355.194, -193)
scale = Vector2(1.38889, 1.38889)

[node name="CollisionShape2D" type="CollisionShape2D" parent="firefly/BirdArea2D"]
position = Vector2(257.415, 141.324)
rotation = -1.5708
scale = Vector2(0.751459, -0.820994)
shape = SubResource("RectangleShape2D_vtaks")

[node name="PipeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="GameOverTimer" type="Timer" parent="."]

[node name="ScoreLbl" type="Label" parent="."]
texture_filter = 1
offset_left = 167.0
offset_top = 4.0
offset_right = 539.0
offset_bottom = 27.0
theme_override_fonts/font = ExtResource("5_0tnpc")
theme_override_font_sizes/font_size = 33
text = "score: 0"
horizontal_alignment = 1

[node name="ChallengeTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="Sounds" type="Node2D" parent="."]

[node name="DeadSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_u5sy4")
volume_db = -8.432

[node name="ScoreSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_gee14")
volume_db = -8.432

[node name="JumpSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_0tnpc")
volume_db = -7.495

[node name="GameBeginAudio" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("10_vtaks")

[connection signal="area_shape_entered" from="firefly/BirdArea2D" to="firefly" method="_on_bird_area_2d_area_shape_entered"]
[connection signal="area_shape_exited" from="firefly/BirdArea2D" to="firefly" method="_on_bird_area_2d_area_shape_exited"]
[connection signal="timeout" from="PipeTimer" to="." method="_on_pipe_timer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
[connection signal="timeout" from="ChallengeTimer" to="." method="_on_challenge_timer_timeout"]
